--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>Stellar XDR Debugger</title>
-  <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/bower_components/bootstrap-treeview/dist/bootstrap-treeview.min.css" rel="stylesheet">
-  <link href="/main.css" rel="stylesheet">
+  <link href="./bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./bower_components/bootstrap-treeview/dist/bootstrap-treeview.min.css" rel="stylesheet">
+  <link href="./main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
   </div>
 
   <div class="stroopy pull-left">
-    <img src="/stroopy.png" alt="Stroopy"/>
+    <img src="./stroopy.png" alt="Stroopy"/>
   </div>
   <div class="pull-left">
     <div class="popover right">
@@ -54,11 +54,11 @@
 
 </div>
 
-<script src="/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="/bower_components/lodash/lodash.min.js"></script>
-<script src="/bower_components/stellar-sdk/stellar-sdk.min.js"></script>
-<script src="/bower_components/bootstrap-treeview/dist/bootstrap-treeview.min.js"></script>
+<script src="./bower_components/jquery/dist/jquery.min.js"></script>
+<script src="./bower_components/lodash/lodash.min.js"></script>
+<script src="./bower_components/stellar-sdk/stellar-sdk.min.js"></script>
+<script src="./bower_components/bootstrap-treeview/dist/bootstrap-treeview.min.js"></script>
 
-<script src="/scripts/app.js"></script>
+<script src="./scripts/app.js"></script>
 </body>
 </html>
