--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Stellar XDR Debugger</title>
+  <title>Stellar XDR Viewer</title>
   <link href="./bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./bower_components/bootstrap-treeview/dist/bootstrap-treeview.min.css" rel="stylesheet">
   <link href="./main.css" rel="stylesheet">
@@ -9,11 +9,11 @@
 
 <body>
 
-<a href="https://github.com/bartekn/stellar-xdr-debugger"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
+<a href="https://github.com/stellar/xdr-viewer"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
 
 <div class="container">
   <div class="header clearfix">
-    <h3 class="text-muted">Stellar XDR Debugger</h3>
+    <h3 class="text-muted">XDR Viewer</h3>
   </div>
 
   <div class="stroopy pull-left">
@@ -38,7 +38,7 @@
   </div>
 
   <div class="form-group">
-    <label for="xdr">Copy and paste base64-encoded XDR blob or <a href="#" onclick="getLatestTransaction(event)">debug the latest transaction in Stellar Test Network</a></label>
+    <label for="xdr">Copy and paste base64-encoded XDR blob or <a href="#" onclick="getLatestTransaction(event)">view the latest transaction in Stellar Test Network</a></label>
     <textarea id="xdr" onkeyup="newXDR()" class="form-control" rows="4"></textarea>
   </div>
 
