--- a/index.html
+++ b/index.html
@@ -1,66 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Stellar XDR Viewer</title>
-  <link href="./bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="./bower_components/bootstrap-treeview/dist/bootstrap-treeview.min.css" rel="stylesheet">
-  <link href="./main.css" rel="stylesheet">
-</head>
-
-<body>
-
-<a href="https://github.com/stellar/xdr-viewer"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
-
-<div class="container">
-  <div class="header clearfix">
-    <h3 class="text-muted">XDR Viewer</h3>
-  </div>
-
-  <div class="stroopy pull-left">
-    <img src="./stroopy.png" alt="Stroopy"/>
-  </div>
-  <div class="pull-left">
-    <div class="popover right">
-      <div class="arrow"></div>
-      <div class="popover-content">
-        <p class="lead">
-          This tool allows you to check contents of base64-encoded <a href="https://github.com/stellar/horizon/blob/master/docs/learn/xdr.md" target="_blank">Stellar XDR</a> blob.
-          You can read Stellar XDR files in <a href="https://github.com/stellar/stellar-core/tree/master/src/xdr" target="_blank">stellar-core</a> repo.
-        </p>
-      </div>
-    </div>
-  </div>
-  <div class="clearfix"></div>
-
-  <div class="form-group">
-    <label for="type">Select type:</label>
-    <select id="type" onchange="newXDR()" class="form-control"></select>
-  </div>
-
-  <div class="form-group">
-    <label for="xdr">Copy and paste base64-encoded XDR blob or <a href="#" onclick="getLatestTransaction(event)">view the latest transaction in Stellar Test Network</a></label>
-    <textarea id="xdr" onkeyup="newXDR()" class="form-control" rows="4"></textarea>
-  </div>
-
-  <div id="alert" class="alert alert-danger hidden" role="alert">
-    <strong>Oh, snap!</strong> <span id="alert-text"></span>
-  </div>
-
-  <div class="row main">
-    <div id="tree"></div>
-  </div>
-
-  <footer class="footer">
-    <p>Stellar</p>
-  </footer>
-
-</div>
-
-<script src="./bower_components/jquery/dist/jquery.min.js"></script>
-<script src="./bower_components/lodash/lodash.min.js"></script>
-<script src="./bower_components/stellar-sdk/stellar-sdk.min.js"></script>
-<script src="./bower_components/bootstrap-treeview/dist/bootstrap-treeview.min.js"></script>
-
-<script src="./scripts/app.js"></script>
-</body>
-</html>
+Moved to <a href="http://stellar.github.io/xdr-viewer/">http://stellar.github.io/xdr-viewer/</a>
